# python-bt-led-strip

./: Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
btledstrip/: __init__.py  consts.py  controllers.py  dev.py  typing.py
btledstrip/demonstrations/: melk.py
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.md
